Fixed events content cut off issue

--- a/essentials/static/css/events_v2.css
+++ b/essentials/static/css/events_v2.css
@@ -127,7 +127,6 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      padding-bottom: 30px;
   }
 
   .event-area{
